@@ -2078,6 +2078,19 @@ name|isChange
 argument_list|()
 condition|)
 block|{
+if|if
+condition|(
+name|view
+operator|.
+name|getTypeComboBox
+argument_list|()
+operator|.
+name|getSelectedItem
+argument_list|()
+operator|!=
+literal|null
+condition|)
+block|{
 name|attributeSaved
 operator|.
 name|setType
@@ -2094,6 +2107,7 @@ name|toString
 argument_list|()
 argument_list|)
 expr_stmt|;
+block|}
 name|attributeSaved
 operator|.
 name|setName
@@ -2372,6 +2386,18 @@ argument_list|()
 operator|!=
 literal|null
 operator|&&
+operator|(
+operator|(
+name|view
+operator|.
+name|getTypeComboBox
+argument_list|()
+operator|.
+name|getSelectedItem
+argument_list|()
+operator|!=
+literal|null
+operator|&&
 operator|!
 name|embeddableNames
 operator|.
@@ -2388,6 +2414,18 @@ operator|.
 name|toString
 argument_list|()
 argument_list|)
+operator|)
+operator|||
+name|view
+operator|.
+name|getTypeComboBox
+argument_list|()
+operator|.
+name|getSelectedItem
+argument_list|()
+operator|==
+literal|null
+operator|)
 condition|)
 block|{
 if|if
