@@ -20,6 +20,7 @@ Bug Fixes:
 
 CAY-2444 Change URI from http:// to https:// in xsi:schemaLocation
 CAY-2445 Oracle: Problem with ExpressionFactory.notInExp()
+CAY-2450 Impossible to update Attribute title at the first attempt after syncing ObjEntity with DbEntity
 
 ----------------------------------
 Release: 4.1.M2
